--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".ui.ppt.PPTThemesActivity"
+            android:name=".ui.ppt_themes.PPTThemesActivity"
             android:exported="true" >
             <!-- <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
