--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -19,7 +19,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Paper_slide"
         android:usesCleartextTraffic="true"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".ui.mindmapview.MindMapShowActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.mindmap.MindmapActivity"
+            android:exported="true">
+          <!--  <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>-->
+        </activity>
         <activity
             android:name=".ui.policy.PolicyActivity"
             android:exported="false" />
@@ -28,7 +40,7 @@
             android:exported="false" />
         <activity
             android:name=".ui.pptthemes.PPTThemesActivity"
-            android:exported="true" >
+            android:exported="true">
 
             <!--
             <intent-filter>
@@ -46,7 +58,7 @@
             android:exported="false" />
         <activity
             android:name=".ui.imortfile.Import_file"
-            android:exported="true" >
+            android:exported="true">
 
             <!--
             <intent-filter>
@@ -64,7 +76,7 @@
             android:exported="true" />
         <activity
             android:name=".ui.texteditor.TextEditor"
-            android:exported="true" >
+            android:exported="true">
 
             <!--
             <intent-filter>
@@ -82,7 +94,7 @@
             android:exported="true" />
         <activity
             android:name=".ui.ocr.Ocr"
-            android:exported="true" >
+            android:exported="true">
 
             <!--
             <intent-filter>
@@ -112,7 +124,7 @@
             android:exported="false" />
         <activity
             android:name=".ui.result.Result"
-            android:exported="true" >
+            android:exported="true">
 
             <!--
             <intent-filter>
@@ -124,7 +136,7 @@
         </activity>
         <activity
             android:name=".ui.summarize.Summarize"
-            android:exported="true" >
+            android:exported="true">
 
             <!--
             <intent-filter>
@@ -151,7 +163,7 @@
             android:exported="false" />
         <activity
             android:name=".ui.home.Home"
-            android:exported="true" >
+            android:exported="true">
 
             <!--
             <intent-filter>
@@ -172,22 +184,35 @@
             android:exported="false" />
         <activity
             android:name=".ui.splash.Splash"
+            android:exported="true">
+
+            <!--
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            -->
+        </activity>
+        <activity
+            android:name=".mindmapweb.d3.MainActivity"
+            android:exported="true">
+       <!--     <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>-->
+        </activity>
+        <activity
+            android:name=".officebuddy.MainActivity"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <activity android:name=".mindmapweb.d3.MainActivity"
-            android:exported="true">
-
 
         </activity>
-        <activity
-            android:name=".officebuddy.MainActivity"
-            android:exported="true" />
         <activity
             android:name=".officebuddy.ppt.pptActivity"
             android:exported="false" />
@@ -204,7 +229,7 @@
             android:authorities="${applicationId}.provider"
             android:exported="false"
             android:grantUriPermissions="true"
-            tools:ignore="WrongManifestParent" >
+            tools:ignore="WrongManifestParent">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/provider_paths" />
